--- a/content/posts/2022_02_12_new_post.md
+++ b/content/posts/2022_02_12_new_post.md
@@ -1,6 +1,6 @@
 ---
 title: New test post
-cover: https://www.cypress.io/static/cypress-io-logo-social-share-8fb8a1db3cdc0b289fad927694ecb415.png
+cover: 
 date: 2022-02-12
 description: All the usual blog post.
 tags: ['post']
